--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react-hooks": "^4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
