--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
     "dev:server": " ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/start/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
