--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -4,5 +4,14 @@
   "port": 5432,
   "username": "postgres",
   "password": "docker",
-  "database": "example"
+  "database": "example",
+  "entities": [
+    "./src/app/models/*.ts"
+  ],
+  "migrations": [
+    "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations/"
+  }
 }
