--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -26,6 +26,13 @@
       "class-methods-use-this": "off",
       "import/prefer-default-export": "off",
       "camelcase": "off",
+      "no-console": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "_"
+        }
+      ],
       "import/extensions": [
         "error",
         "ignorePackages",
