--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -2,7 +2,7 @@
   "name": "default",
   "type": "sqlite",
   "database": "./src/database/database.sqlite",
-  "entities": ["./src/app/models/*.ts"],
+  "entities": ["./src/app/entities/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations/"
