--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@config/*": ["config/*"],
       "@controller/*": ["app/controllers/*"],
-      "@models/*": ["app/models/*"]
+      "@entities/*": ["app/entities/*"]
     },
     "typeRoots": [
       "./node_modules/@types",
